--- a/index (1).html
+++ b/index (1).html
@@ -18,8 +18,8 @@
         </div>
         <div>
           <h1 class="profile_name">
-            <span class="profile_name_firstName">Rashmi</span>
-            <span class="profile_name_lastName">Hiremath</span>
+            <span class="profile_name_firstName">Preeti</span>
+            <span class="profile_name_lastName">Kammar</span>
           </h1>
           <p class="profile_title">Software Developer</p>
           <p class="description profile_description">
@@ -32,8 +32,7 @@
       <div class="skills">
         <h3 class="title">Expertise</h3>
         <ul class="skills_list description">
-          <li>JavaScript</li>
-          <li>PHP & Wordpress</li>
+          <li>JavaScript</li>          
           <li>HTML CSS</li>
           <li>React JS</li>
           <li>MERN STACK</li>
@@ -55,7 +54,7 @@
           <p class="item_preTitle">2020-2022</p>
           <h4 class="item_title">P.U</h4>
           <p class="item_subtitle">
-            Oxford Pu College,Nagarabhetta
+            Hanchinmani P.U college, Dharwad
           </p>
         </div>
         <div class="edu_item">
@@ -87,10 +86,10 @@
         <h3 class="title">Experience</h3>
         <div class="exp_item">
           <p class="item_preTitle">2024 - present</p>
-          <h4 class="item_title">Kulturehire</h4>
-          <p class="item_subtitle">Business Anaylst</p>
+          <h4 class="item_title">CodSoft</h4>
+          <p class="item_subtitle">Java programmer</p>
           <p class=" description">
-            well it was good to part of kulturehire and learned some industry level skills
+            well it was good to part of codsoft and learned some industry level skills
           </p>
         </div>
         <div class="exp_item">
@@ -128,7 +127,7 @@
             +91 ** *** ***
           </p>
           <p class="description">
-            RashmiHiremath@gmail.com
+            preetibk@gmail.com
            </p>
         </div>
       </div>
